<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/history"
        android:title="@string/history"
        app:showAsAction="never" />

    <item
        android:id="@+id/wa_direct"
        android:title="@string/wa_direct"
        app:showAsAction="never" />

    <item
        android:id="@+id/qr_generator"
        android:title="@string/qr_generator"
        app:showAsAction="never" />

    <item
        android:id="@+id/scan_from_gallery"
        android:title="@string/scan_from_gallery"
        app:showAsAction="never" />

    <item
        android:id="@+id/about"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
